--- a/lesson2-download-AR.ipynb
+++ b/lesson2-download-AR.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "hide_input": false
    },
@@ -488,6 +488,15 @@
     "torch.manual_seed(42)\n",
     "torch.backends.cudnn.deterministic = True\n",
     "torch.backends.cudnn.benchmark = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc(ImageDataBunch)"
    ]
   },
   {
