--- a/lesson2-download-MM.ipynb
+++ b/lesson2-download-MM.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {
     "hide_input": false
    },
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1499,7 +1499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1524,15 +1524,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/envs/fastai/lib/python3.6/site-packages/fastai/data_block.py:180: UserWarning: `no_split` is deprecated, please use `split_none`.\n",
-      "  warn(\"`no_split` is deprecated, please use `split_none`.\")\n"
+     "ename": "NameError",
+     "evalue": "name 'ImageList' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-23-21cdaf979e33>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m db = (ImageList.from_folder(path)\n\u001b[0m\u001b[0;32m      2\u001b[0m                    \u001b[1;33m.\u001b[0m\u001b[0mno_split\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m                    \u001b[1;33m.\u001b[0m\u001b[0mlabel_from_folder\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m                    \u001b[1;33m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mget_transforms\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msize\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m224\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m                    \u001b[1;33m.\u001b[0m\u001b[0mdatabunch\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'ImageList' is not defined"
      ]
     }
    ],
@@ -2394,6 +2397,7 @@
     }
    ],
    "source": [
+    "# Check default device before changing it\n",
     "defaults.device"
    ]
   },
@@ -2414,6 +2418,7 @@
     }
    ],
    "source": [
+    "# Double check I can put it back to cuda :-)\n",
     "defaults.device == torch.device('cuda',index=0)"
    ]
   },
@@ -2423,7 +2428,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "defaults.device = torch.device('cpu')"
+    "# And finally set it to CPU\n",
+    "defaults.device = torch.device('cpu')\n"
    ]
   },
   {
@@ -2514,22 +2520,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://course.fast.ai/deployment_render.html#one-time-setup\n"
+    "# Put into production with Render\n",
+    "\n",
+    "Instructions are here https://course.fast.ai/deployment_render.html#one-time-setup\n",
+    "\n",
+    "In a nutshell:\n",
+    "\n",
+    "- Fork https://github.com/render-examples/fastai-v3 repo in your github\n",
+    "- Create a Render account, better if you do it using your Github account\n",
+    "- Get a direct link to your model file\n",
+    "- Edit server.py and index.html"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "![downlaod images](https://raw.githubusercontent.com/mallibus/DSS-Learning-Group-Lesson-2/master/img/Slide25.jpg)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## How to get direct link to a model file\n",
+    "\n",
+    "- Download `export.pkl` file from  `data\\robots` folder"
+   ]
   },
   {
    "cell_type": "code",
