--- a/lesson2-download-MM-2.ipynb
+++ b/lesson2-download-MM-2.ipynb
@@ -72,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```\n",
+    "```Json\n",
     "{\n",
     "    \"Records\": [\n",
     "        {\n",
@@ -142,7 +142,7 @@
    "source": [
     "Upload your .zip file. You just need to press 'Upload' in your working directory and select your file, then click 'Upload' for each of the displayed files.\n",
     "\n",
-    "![uploaded file](images/download_images/upload.png)"
+    "![uploaded file](https://raw.githubusercontent.com/fastai/course-v3/master/nbs/dl1/images/download_images/upload.png)"
    ]
   },
   {
@@ -191,55 +191,6 @@
    "source": [
     "import sys\n",
     "import zipfile"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "target_zipfile = path/'test.zip'\n",
-    "target_dir = path/'test'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[info] Listing contents of archive:\n",
-      "File Name                                             Modified             Size\n",
-      "23-gennaio-2014-web.jpg                        2019-06-17 00:17:48        75837\n",
-      "maxresdefault.jpg                              2019-06-17 00:18:28       137062\n",
-      "Slide1.JPG                                     2019-06-17 00:15:42        94025\n",
-      "Slide10.JPG                                    2019-06-17 00:15:42       153010\n",
-      "Slide11.JPG                                    2019-06-17 00:15:42       131596\n",
-      "Slide12.JPG                                    2019-06-17 00:15:44       145079\n",
-      "Slide13.JPG                                    2019-06-17 00:15:44       106974\n",
-      "Slide2.JPG                                     2019-06-17 00:15:42       119697\n",
-      "Slide3.JPG                                     2019-06-17 00:15:42        90157\n",
-      "Slide4.JPG                                     2019-06-17 00:15:42        88812\n",
-      "Slide5.JPG                                     2019-06-17 00:15:42       111645\n",
-      "Slide6.JPG                                     2019-06-17 00:15:42        94277\n",
-      "Slide7.JPG                                     2019-06-17 00:15:42       138280\n",
-      "Slide8.JPG                                     2019-06-17 00:15:42        87406\n",
-      "Slide9.JPG                                     2019-06-17 00:15:42        78001\n",
-      "[info] Extracting files under data/robots2/test\n"
-     ]
-    }
-   ],
-   "source": [
-    "with zipfile.ZipFile(target_zipfile, 'r', zipfile.ZIP_DEFLATED) as zfp:\n",
-    "    print('[info] Listing contents of archive:')\n",
-    "    zfp.printdir()\n",
-    "    print('[info] Extracting files under %s' %(target_dir))\n",
-    "    zfp.extractall(target_dir)\n",
-    "    zfp.close()"
    ]
   },
   {
@@ -1982,11 +1933,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "classes = [s.name for s in path.ls()]"
+    "# get root filename of all files with extension .txt\n",
+    "# I'm sure there is a smarter way!\n",
+    "classes = [n.name.split('.')[0] for n in [s for s in path.ls() if s.is_file()] if n.name.split('.')[1]=='txt']\n",
+    "classes"
    ]
   },
   {
